--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 html {
     display: none;
 }
+
+dl
+{
+	margin-left: 2em;
+	padding: .8em;
+	background-color: white;
+	border-width: 1px;
+	border-style: solid;
+	border-color: black;
+}
+
+dt
+{
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+}
+
+dd
+{
+	margin: 0 0 0 0;
+	padding: 0 0 0 20px;
+	background: url(arrow.gif) no-repeat 0 1px;
+}
